--- a/index.html
+++ b/index.html
@@ -90,8 +90,65 @@
             </a>
           </div>
     </div>
+    <div class="container categories">
+      <div class="row">
+        <!-- within 'col-md-4', we create another divs for each picture.Because here it gives the require little gap beside each items.  -->
+        <!-- For setting multiple items alongside use Flex, set the parent of the elements with 'd-flex justify-content-between' class. -->
+        <!-- For setting the alignment of element/text in center use Flex with the direct class 'align-items-center' in the parent -->
+        <div class="col-md-4 ">
+          <div class="cat-1 d-flex justify-content-between align-items-center">
+            <h1>Watch</h1>
+            <img src="images/categories/watch.png" alt="">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="cat-2 d-flex justify-content-between align-items-center">
+            <h1>Bag</h1>
+            <img src="images/categories/bag.png" alt="">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="cat-3 d-flex justify-content-between align-items-center">
+            <h1>Shoes</h1>
+            <img src="images/categories/shoes.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
 
-
+    <!-- for the shoes item section we can use Cards from bootstrap website-'https://getbootstrap.com/docs/4.4/components/card/'. 'Card decks' is suitable for the require product design.It has gaps between each items.  -->
+    <div class="container" id="shoes">
+      <h1>Shoes</h1>
+      <div class="card-deck">
+        <div class="card">
+          <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Supply 350</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5>$120</h5>
+            <button class="buy-now-button">Buy Now >></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Nike 360</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <h5>$320</h5>
+            <button class="buy-now-button">Buy Now >></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Red Airmax</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content..</p>
+            <h5>$350</h5>
+            <button class="buy-now-button">Buy Now >></button>
+          </div>
+        </div>
+      </div>
+    </div>
     
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
