the Backpack is done

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
     <!-- for the shoes item section we can use Cards from bootstrap website-'https://getbootstrap.com/docs/4.4/components/card/'. 'Card decks' is suitable for the require product design.It has gaps between each items.  -->
     <div class="container" id="shoes">
-      <h1>Shoes</h1>
+      <h3>Shoes</h3>
       <div class="card-deck">
         <div class="card">
           <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
@@ -133,7 +133,7 @@
           <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Nike 360</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             <h5>$320</h5>
             <button class="buy-now-button">Buy Now >></button>
           </div>
@@ -142,13 +142,56 @@
           <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Red Airmax</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content..</p>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             <h5>$350</h5>
             <button class="buy-now-button">Buy Now >></button>
           </div>
         </div>
       </div>
     </div>
+
+    <!-- The 'Backpack' category section is like the 'Shoes' category section -->
+    <!-- Using another Card under the 'Card decks'.It's not the 'Shoe' category section's Card.It's on just below the card we used for 'Shoe' category items in  from getbootstrap.Just like with card groups, card footers in decks will automatically line up. It's alinged perfectly -->
+    <!-- to customize the button's background- do inspect elements on the button's background, identify the class name and update the style in css. Here we find the class name 'card-footer'  -->
+    <div class="container">
+      <h3>Backpack</h3>
+      <div class="card-deck">
+        <div class="card">
+          <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Red Backpack</h5>
+            <h5>$125</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card-footer">
+            <button class="buy-now-button">Buy Now >></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Blue Backpack</h5>
+            <h5>$320</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          </div>
+          <div class="card-footer">
+            <button class="buy-now-button">Buy Now >></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Black Backpack</h5>
+            <h5>$169</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          </div>
+          <div class="card-footer">
+            <button class="buy-now-button">Buy Now >></button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
